examples/parse_errors/missing_brace.espr
if true {
    print("missing brace")
